Release: Player Companies, Company Creation Tax & Fixes (#34)
* Feature: Basic GUIs to buy and sell stocks. (#18)

* feat: added some simple guis to manage portfolio and companies.

* fix: several graphic issues with the new guis.

* Fix: removed static plugin instance. (#19)

* Fix: Update to paths in order to fix windows bootstrap (#20)

* Fix: Format high numbers with a more human-readable format (#22)

* Feature: Button to buy 100 Company shares in Companies GUI. (#23)

* feat: action to buy 100 stocks of a company with one click.

* fix: fixed company variation percentage in signs.

* Feature: Player-oriented Company Creation and Taxes (#29)

* feat: commands for players to create/delete companies.

* feat: configurable taxes per company risk.

* Bugfix: Companies created with past IDs (#30)

* Bugfix: Players can control admin-created companies (#31)

* Bugfix: Fixing argument parsing for Risk and Share price (#32)

* chore: removed unnecessary messages.

* chore: update plugin version to 2.5.0

* Bugfix: Investment item showing negative values in GUI (#33)